force-app/main/default/objects/MessageBoard__c/MessageBoard__c.object-meta.xml
<CustomObject>
    <label>掲示板</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>掲示板名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>