force-app/main/default/objects/MessageBoard__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部門</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>共通</fullName>
            </value>
            <value>
                <fullName>代理店サポート</fullName>
            </value>
            <value>
                <fullName>カスタマーセンター</fullName>
            </value>
            <value>
                <fullName>計上グループ</fullName>
            </value>
            <value>
                <fullName>事故受付センター</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>