force-app/main/default/objects/MessageBoard__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>詳細</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>