force-app/main/default/objects/MessageBoard__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>グループ</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>アシストライン（共通）</fullName>
            </value>
            <value>
                <fullName>アシストライン（自動車）</fullName>
            </value>
            <value>
                <fullName>アシストライン（火災）</fullName>
            </value>
            <value>
                <fullName>アシストライン（傷害新種）</fullName>
            </value>
            <value>
                <fullName>アシストライン（全般）</fullName>
            </value>
            <value>
                <fullName>アシストライン（パスワード）</fullName>
            </value>
            <value>
                <fullName>アシストライン（IE）</fullName>
            </value>
            <value>
                <fullName>アシストライン（D精算O領収証）</fullName>
            </value>
            <value>
                <fullName>アシストライン（その他）</fullName>
            </value>
            <value>
                <fullName>アシストライン（ディーラ）</fullName>
            </value>
            <value>
                <fullName>アシストライン（E-JIBAI）</fullName>
            </value>
            <value>
                <fullName>アシストライン（生保）</fullName>
            </value>
            <value>
                <fullName>アシストライン（支援事務）</fullName>
            </value>
            <value>
                <fullName>カスタマーセンター（共通）</fullName>
            </value>
            <value>
                <fullName>計上グループ（共通）</fullName>
            </value>
            <value>
                <fullName>JAカード傷害・JAトラブル</fullName>
            </value>
            <value>
                <fullName>サポートデスク</fullName>
            </value>
            <value>
                <fullName>富国異動</fullName>
            </value>
            <value>
                <fullName>火新異動</fullName>
            </value>
            <value>
                <fullName>自動継続停止</fullName>
            </value>
            <value>
                <fullName>自動車新規</fullName>
            </value>
            <value>
                <fullName>自動車満期</fullName>
            </value>
            <value>
                <fullName>自動車異動</fullName>
            </value>
            <value>
                <fullName>自動車試算SD</fullName>
            </value>
            <value>
                <fullName>自賠責解約</fullName>
            </value>
            <value>
                <fullName>証券再発行</fullName>
            </value>
            <value>
                <fullName>事故受付センター（共通）</fullName>
            </value>
            <value>
                <fullName>火災新種事故受付</fullName>
            </value>
            <value>
                <fullName>伝言管理</fullName>
            </value>
            <value>
                <fullName>第三分野受付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>