force-app/main/default/objects/MessageBoard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Group__c</columns>
    <columns>Subject__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>