force-app/main/default/objects/MessageBoard__c/listViews/Common_All.listView-meta.xml
<ListView>
    <fullName>Common_All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Group__c</columns>
    <columns>Subject__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>共通</value>
    </filters>
    <label>部門共通</label>
</ListView>