force-app/main/default/objects/MessageBoard__c/listViews/Customer_Common.listView-meta.xml
<ListView>
    <fullName>Customer_Common</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Group__c</columns>
    <columns>Subject__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>カスタマーセンター（共通）</value>
    </filters>
    <label>カスタマーセンター（共通）</label>
</ListView>