force-app/main/default/objects/MessageBoard__c/listViews/Customer_JA.listView-meta.xml
<ListView>
    <fullName>Customer_JA</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Group__c</columns>
    <columns>Subject__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>JAカード傷害・JAトラブル</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>カスタマーセンター</value>
    </filters>
    <label>カスタマーセンター（JAカード傷害・JAトラブル）</label>
</ListView>