force-app/main/default/objects/MessageBoard__c/listViews/Customer_Stop.listView-meta.xml
<ListView>
    <fullName>Customer_Stop</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Group__c</columns>
    <columns>Subject__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>自動継続停止</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>カスタマーセンター</value>
    </filters>
    <label>カスタマーセンター（自動継続停止）</label>
</ListView>