force-app/main/default/objects/MessageBoard__c/listViews/Dairiten_Car.listView-meta.xml
<ListView>
    <fullName>Dairiten_Car</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Group__c</columns>
    <columns>Subject__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>アシストライン（自動車）</value>
    </filters>
    <label>アシストライン（自動車）</label>
</ListView>